kej, index title 수정

--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta http-equiv="Refresh" content="1; url=work/product/goMain.do"/>
-<title>ESHOP 쇼핑몰 프로그램aa</title>
+<title>AROMA, FRAGANCIA</title>
 </head>
 <body>
 
